iai-callgrind/tests/ui/test_main_invalid_library_benchmark_setup_deprecated copy.rs
mod test_main_deprecated {
    use iai_callgrind::main;
    fn some_func() {}
    main!(run = cmd = "some", id = "id", args = []);
}

fn main() {}
